# simple-embeddings-module

./: .gitignore  COMMIT_MESSAGE.md  DOCUMENTATION_STRUCTURE.md  MANIFEST.in  PHASE1_COMPLETE.md  README.md  TODO.md  WEB_API_COMPLETE.md  WEB_API_GUIDE.md  pyproject.toml  requirements.txt  setup.py
demo/: README.md  demo_code_samples.py  demo_hierarchy_grouping.py  demo_s3_storage.py  demo_semantic_chunking.py  demo_ultimate_code_chunking.py  example_code_search.py  run_demos.sh
demo/demo_files/: Demo.java  demo.js  demo.py  demo.rs
docs/: CLI_HELP_SYSTEM.md  QUERY_TOOL_README.md  SIMPLE_CLI_README.md  cli-guide.rst  cli-reference.rst  conf.py  index.rst  installation.rst  quickstart.rst  simple-interface.rst
docs/examples/: index.rst
sem_indexes/batch_test/: index.json.gz.bak1  metadata.json
sem_indexes/debug_test/: index.json.gz.bak1  metadata.json
sem_indexes/default/: index.json.gz.bak1  index.json.gz.bak2  index.json.gz.bak3  metadata.json
sem_indexes/provider_test/: index.json.gz.bak1  metadata.json
sem_indexes/smoke_simple/: metadata.json
sem_indexes/test_simple/: index.json.gz.bak2  index.json.gz.bak3  metadata.json
sem_indexes/test_simple2/: index.json.gz.bak1  index.json.gz.bak2  index.json.gz.bak3  metadata.json
src/simple_embeddings_module/: __init__.py  sem_auto_resolve.py  sem_cli.py  sem_cli_click.py  sem_commands_gcp.py  sem_config_builder.py  sem_core.py  sem_decorators_stub.py  sem_module_reg.py  sem_output.py  sem_simple.py  sem_simple_aws.py  sem_simple_commands.py  sem_simple_gcp.py  sem_simple_server.py  sem_simple_server_client.py  sem_utils.py  sem_web_api.py  sem_web_client.py
src/simple_embeddings_module/chunking/: __init__.py  mod_chunk_mux.py  mod_chunking_base.py  mod_chunking_ts.py  mod_chunking_ts_lang_lazy.py  mod_code.py  mod_hierarchy_grouping.py  mod_hierarchy_integration.py  mod_semantic_code.py  mod_semantic_similarity.py  mod_text.py
src/simple_embeddings_module/embeddings/: __init__.py  mod_bedrock.py  mod_embeddings_base.py  mod_llamacpp.py  mod_ollama.py  mod_openai.py  mod_sentence_transformers.py
src/simple_embeddings_module/serialization/: __init__.py  mod_json.py  mod_orjson.py  mod_serialization_base.py  mod_torch.py
src/simple_embeddings_module/storage/: __init__.py  mod_gcs.py  mod_google_drive.py  mod_local_disk.py  mod_s3.py  mod_storage_base.py
test/: README.md  run_dynamic_cli_tests.py  run_tests.sh  smoke_test.py  test_code_chunking_provider.py  test_dynamic_cli_e2e.py  test_dynamic_cli_stress.py  test_hierarchy_grouping.py  test_lazy_loading.py  test_s3_storage.py  test_semantic_chunking.py  validate_dynamic_cli.py
tools/: README.md  query_dev_docs.py  run_query_tool.sh
